projects: fixed wrong margin on event title

--- a/orgapy/static/orgapy/css/projects.css
+++ b/orgapy/static/orgapy/css/projects.css
@@ -347,10 +347,13 @@
 }
 
 .event-title {
-    margin-left: .2rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.event-time ~ .event-title {
+    margin-left: .2rem;
 }
 
 .event-over {
